--- a/sass/layout/_section2-feature.scss
+++ b/sass/layout/_section2-feature.scss
@@ -2,17 +2,31 @@
     padding-top: 60px;
     padding-bottom: 60px;
 
-
     // padding-top: 95px;
+    &-list {
+        @media screen and (min-width: 768px) {
+            display: flex;
+            flex-wrap: wrap;
+        }
+    }
+
     &-item {
-        &:not(:last-child) {
-            @media screen and (max-width: 767px) {
+        @media screen and (max-width: 767px) {
+            &:not(:last-child) {
                 margin-bottom: 30px;
             }
         }
 
-        &:not(:nth-child(4n)) {
-            // margin-right: 30px;
+        @media screen and (min-width: 768px) {
+            width: calc((100% - 30px) / 2);
+
+            &:not(:nth-child(2n)) {
+                margin-right: 30px;
+            }
+
+            &:not(:nth-last-child(-n+2)) {
+                margin-bottom: 32px;
+            }
         }
 
         &::before {
@@ -28,7 +42,9 @@
         }
 
         .item-title {
-            text-align: center;
+            @media screen and (max-width: 767px) {
+                text-align: center;
+            }
         }
     }
 
