--- a/css/main.css
+++ b/css/main.css
@@ -447,6 +447,12 @@ body {
   }
 }
 
+@media all and (min-width: 768px) {
+  .container {
+    width: 768px;
+  }
+}
+
 .section {
   padding-top: 60px;
   padding-bottom: 60px;
@@ -664,11 +670,12 @@ body {
   bottom: 0;
   left: 0;
   pointer-events: all;
+  visibility: visible;
   opacity: 1;
   z-index: 100;
   background: rgba(0, 0, 0, 0.2);
-  -webkit-transition-property: opacity, visibility 250ms, 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  transition-property: opacity, visibility 250ms, 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  -webkit-transition: opacity, visibility 250ms, 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: opacity, visibility 250ms, 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .backdrop.is-hidden {
@@ -689,6 +696,7 @@ body {
   left: 50%;
   -webkit-transform: translate(-50%, -50%);
           transform: translate(-50%, -50%);
+  width: calc(100% - 30px);
   max-width: 528px;
   padding: 40px;
   background: #ffffff;
@@ -697,13 +705,13 @@ body {
   border-radius: 4px;
 }
 
-@media screen and (max-width: 479px) {
+@media screen and (min-width: 768px) {
   .modal {
-    width: calc(100% - 30px);
+    max-width: 450px;
   }
 }
 
-.btn-close {
+.modal .btn-close {
   position: absolute;
   top: 8px;
   right: 8px;
@@ -833,10 +841,18 @@ body {
   position: relative;
   padding: 15px 0;
   border-bottom: 1px solid #ececec;
-  font-size: 18px;
-  line-height: 1.16667;
-  font-weight: 500;
-  letter-spacing: 0.02em;
+}
+
+@media screen and (min-width: 768px) {
+  .header {
+    padding: 20px 0;
+  }
+}
+
+.header-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
 }
 
 @media screen and (max-width: 767px) {
@@ -845,12 +861,19 @@ body {
   }
 }
 
-.header-menu {
-  margin-bottom: 57px;
+@media screen and (min-width: 768px) {
+  .header-menu {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    margin-left: 88px;
+  }
 }
 
-.header-menu-item:not(:last-child) {
-  margin-bottom: 40px;
+@media screen and (min-width: 768px) {
+  .header-menu-item:not(:last-child) {
+    margin-right: 50px;
+  }
 }
 
 .header-menu-link {
@@ -872,6 +895,12 @@ body {
   transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+@media screen and (min-width: 768px) {
+  .header-menu-link::after {
+    position: absolute;
+  }
+}
+
 .header-menu-link.active, .header-menu-link:hover, .header-menu-link:focus {
   color: #2196F3;
 }
@@ -882,8 +911,29 @@ body {
   background-color: #2196F3;
 }
 
+@media screen and (min-width: 768px) {
+  .header-menu-link.active::after, .header-menu-link.active::after, .header-menu-link.active::after, .header-menu-link:hover::after, .header-menu-link:hover::after, .header-menu-link:hover::after, .header-menu-link:focus::after, .header-menu-link:focus::after, .header-menu-link:focus::after {
+    margin-top: 0;
+    bottom: -29px;
+  }
+}
+
+.header-contact-list {
+  font-size: 12px;
+  line-height: 14px;
+  font-weight: 500;
+  letter-spacing: 0.02em;
+  margin-left: auto;
+}
+
 .header-contact-item:not(:last-child) {
   margin-bottom: 15px;
+}
+
+@media screen and (min-width: 768px) {
+  .header-contact-item:not(:last-child) {
+    margin-bottom: 10px;
+  }
 }
 
 .header-contact-link {
@@ -896,6 +946,42 @@ body {
   vertical-align: middle;
   margin-right: 6px;
   fill: currentColor;
+}
+
+.mobile-menu {
+  font-size: 18px;
+  line-height: 1.16667;
+  font-weight: 500;
+  letter-spacing: 0.02em;
+}
+
+@media screen and (min-width: 768px) {
+  .mobile-menu {
+    display: none;
+  }
+}
+
+.mobile-menu .mobile-menu-container {
+  position: absolute;
+  top: 100%;
+  left: 0;
+  width: 100%;
+  pointer-events: none;
+  visibility: hidden;
+  opacity: 0;
+  background-color: #ffffff;
+  padding: 60px;
+  text-align: center;
+  z-index: 1;
+  border-top: 1px solid #ececec;
+  -webkit-transition: opacity, visibility 250ms, 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: opacity, visibility 250ms, 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.mobile-menu .mobile-menu-container.is-open {
+  pointer-events: all;
+  visibility: visible;
+  opacity: 1;
 }
 
 .mobile-menu .navigation {
@@ -922,15 +1008,11 @@ body {
   background-color: transparent;
 }
 
-.mobile-menu input[type="checkbox"] {
-  display: none;
-}
-
-.mobile-menu .menu-button.is-open label > .bar {
+.mobile-menu .menu-button.is-open .bar {
   background: rgba(255, 255, 255, 0);
 }
 
-.mobile-menu .menu-button.is-open label > .bar:after {
+.mobile-menu .menu-button.is-open .bar:after {
   top: 0;
   -webkit-transform: rotate(45deg);
           transform: rotate(45deg);
@@ -940,7 +1022,7 @@ body {
   transition: top 300ms cubic-bezier(0.23, 1, 0.32, 1), transform 300ms 300ms cubic-bezier(0.23, 1, 0.32, 1), -webkit-transform 300ms 300ms cubic-bezier(0.23, 1, 0.32, 1);
 }
 
-.mobile-menu .menu-button.is-open label > .bar:before {
+.mobile-menu .menu-button.is-open .bar:before {
   bottom: 0;
   -webkit-transform: rotate(-45deg);
           transform: rotate(-45deg);
@@ -991,20 +1073,12 @@ body {
   transition: top 300ms 300ms cubic-bezier(0.23, 1, 0.32, 1), transform 300ms cubic-bezier(0.23, 1, 0.32, 1), -webkit-transform 300ms cubic-bezier(0.23, 1, 0.32, 1);
 }
 
-.mobile-menu .mobile-menu-container {
-  display: none;
-  position: absolute;
-  top: 100%;
-  left: 0;
-  width: 100%;
-  background-color: #ffffff;
-  padding: 60px;
-  text-align: center;
-  z-index: 1;
+.mobile-menu .header-menu {
+  margin-bottom: 57px;
 }
 
-.mobile-menu .mobile-menu-container.is-open {
-  display: block;
+.mobile-menu .header-menu-item:not(:last-child) {
+  margin-bottom: 40px;
 }
 
 .hero {
@@ -1073,9 +1147,31 @@ body {
   padding-bottom: 60px;
 }
 
+@media screen and (min-width: 768px) {
+  .feature-list {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+  }
+}
+
 @media screen and (max-width: 767px) {
   .feature-item:not(:last-child) {
     margin-bottom: 30px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .feature-item {
+    width: calc((100% - 30px) / 2);
+  }
+  .feature-item:not(:nth-child(2n)) {
+    margin-right: 30px;
+  }
+  .feature-item:not(:nth-last-child(-n+2)) {
+    margin-bottom: 32px;
   }
 }
 
@@ -1091,8 +1187,10 @@ body {
   background-position: center;
 }
 
-.feature-item .item-title {
-  text-align: center;
+@media screen and (max-width: 767px) {
+  .feature-item .item-title {
+    text-align: center;
+  }
 }
 
 .feature-attention::before {
@@ -1111,7 +1209,7 @@ body {
   background-image: url(../images/icon/feature-astronaut.svg);
 }
 
-@media screen and (max-width: 767px) {
+@media screen and (max-width: 1200px) {
   .examples {
     display: none;
   }
@@ -1144,11 +1242,33 @@ body {
   background-color: #f5f4fa;
 }
 
+@media screen and (min-width: 768px) {
+  .team-list {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+  }
+}
+
 .team-item {
   background: #ffffff;
   -webkit-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
           box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
+}
+
+@media screen and (min-width: 768px) {
+  .team-item {
+    width: calc((100% - 30px) / 2);
+  }
+  .team-item:not(:nth-child(2n)) {
+    margin-right: 30px;
+  }
+  .team-item:not(:nth-last-child(-n+2)) {
+    margin-bottom: 32px;
+  }
 }
 
 @media screen and (max-width: 767px) {
@@ -1187,21 +1307,28 @@ body {
       flex-wrap: wrap;
 }
 
-.clients-item {
-  width: calc((100% - 30px) / 2);
-}
-
 @media screen and (max-width: 767px) {
   .clients-item {
+    width: calc((100% - 30px) / 2);
+  }
+  .clients-item:not(:nth-last-child(-n+2)) {
     margin-bottom: 30px;
   }
-  .clients-item:last-child, .clients-item:nth-last-child(2) {
-    margin-bottom: 0;
+  .clients-item:not(:nth-child(2n)) {
+    margin-right: 30px;
   }
 }
 
-.clients-item:not(:nth-child(2n)) {
-  margin-right: 30px;
+@media screen and (min-width: 768px) {
+  .clients-item {
+    width: calc((100% - 30px * 2) / 3);
+  }
+  .clients-item:not(:nth-last-child(-n+3)) {
+    margin-bottom: 30px;
+  }
+  .clients-item:not(:nth-child(3n)) {
+    margin-right: 30px;
+  }
 }
 
 .clients-link {
@@ -1245,15 +1372,41 @@ body {
   background: #2f303a;
 }
 
-.footer-info {
-  margin-bottom: 56px;
-}
-
 .footer-list {
   -webkit-box-align: baseline;
       -ms-flex-align: baseline;
           align-items: baseline;
   text-align: center;
+}
+
+@media screen and (min-width: 768px) {
+  .footer-list {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+  .footer-list .footer-info,
+  .footer-list .footer-join-in {
+    width: calc((100% - 30px) / 2);
+  }
+  .footer-list .footer-subscribe {
+    width: 61%;
+  }
+}
+
+.footer-info {
+  margin-bottom: 56px;
+}
+
+@media screen and (min-width: 768px) {
+  .footer-info {
+    margin-right: 30px;
+  }
 }
 
 .footer .logo {
