--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -5,10 +5,11 @@
     bottom: 0;
     left: 0;
     pointer-events: all;
+    visibility: visible;
     opacity: 1;
     z-index: 100;
     background: rgba(0, 0, 0, 0.2);
-    transition-property: opacity, visibility 250ms, 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: opacity, visibility 250ms, 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
     &.is-hidden {
         pointer-events: none;
@@ -27,27 +28,28 @@
     left: 50%;
     transform: translate(-50%, -50%);
 
+    width: calc(100% - 30px);
     max-width: 528px;
     padding: 40px;
     background: $secondary-text-color;
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
     border-radius: 4px;
 
-    @media screen and (max-width: 479px) {
-        width: calc(100% - 30px);
+    @media screen and (min-width: 768px) {
+        max-width: 450px;
     }
-}
 
-.btn-close {
-    position: absolute;
-    top: 8px;
-    right: 8px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 30px;
-    height: 30px;
-    background: $secondary-text-color;
-    border: 1px solid rgba(0, 0, 0, 0.1);
-    border-radius: 50%;
+    .btn-close {
+        position: absolute;
+        top: 8px;
+        right: 8px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 30px;
+        height: 30px;
+        background: $secondary-text-color;
+        border: 1px solid rgba(0, 0, 0, 0.1);
+        border-radius: 50%;
+    }
 }
