--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -4,28 +4,32 @@
     border-bottom: 1px solid #ececec;
 
 
+    @media screen and (min-width: 768px) {
+        padding: 20px 0;
+    }
+
     // padding: 24px 0;
 
     &-container {
+        display: flex;
+
         @media screen and (max-width: 767px) {
             display: none;
         }
     }
 
-    font-size: 18px;
-    line-height: 1.16667;
-    font-weight: 500;
-    letter-spacing: 0.02em;
-
     &-menu {
-        // margin-left: 93px;
-        margin-bottom: 57px;
+        @media screen and (min-width: 768px) {
+            display: flex;
+            margin-left: 88px;
+        }
 
         &-item {
             &:not(:last-child) {
-                margin-bottom: 40px;
+                @media screen and (min-width: 768px) {
+                    margin-right: 50px;
+                }
             }
-
         }
 
         &-link {
@@ -37,14 +41,16 @@
             &::after {
                 content: "";
                 display: block;
-                // position: absolute;
                 width: 100%;
                 height: 4px;
                 bottom: -10px;
                 border-radius: 2px;
                 background-color: transparent;
-
                 transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+                @media screen and (min-width: 768px) {
+                    position: absolute;
+                }
             }
         }
 
@@ -56,17 +62,33 @@
             &::after,
             &::after,
             &::after {
-
                 margin-top: 8px;
                 bottom: -12px;
                 background-color: $accent-color;
+
+                @media screen and (min-width: 768px) {
+                    margin-top: 0;
+                    bottom: -29px;
+                }
             }
         }
     }
 
     &-contact {
+        &-list {
+            font-size: 12px;
+            line-height: 14px;
+            font-weight: 500;
+            letter-spacing: 0.02em;
+            margin-left: auto;
+        }
+
         &-item:not(:last-child) {
             margin-bottom: 15px;
+
+            @media screen and (min-width: 768px) {
+                margin-bottom: 10px;
+            }
         }
 
         &-link {
@@ -88,8 +110,35 @@
     $bar-height: 2.65px;
     $bar-spacing: 7px;
 
-    * {
-        // outline: 1px solid red;
+    font-size: 18px;
+    line-height: 1.16667;
+    font-weight: 500;
+    letter-spacing: 0.02em;
+
+    @media screen and (min-width: 768px) {
+        display: none;
+    }
+
+    .mobile-menu-container {
+        position: absolute;
+        top: 100%;
+        left: 0;
+        width: 100%;
+        pointer-events: none;
+        visibility: hidden;
+        opacity: 0;
+        background-color: $secondary-text-color;
+        padding: 60px;
+        text-align: center;
+        z-index: 1;
+        border-top: 1px solid #ececec;
+        transition: opacity, visibility 250ms, 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+        &.is-open {
+            pointer-events: all;
+            visibility: visible;
+            opacity: 1;
+        }
     }
 
     .navigation {
@@ -108,12 +157,8 @@
         background-color: transparent;
     }
 
-    input[type="checkbox"] {
-        display: none;
-    }
-
     .menu-button.is-open {
-        & label>.bar {
+        .bar {
             background: rgba(255, 255, 255, 0);
 
             &:after {
@@ -128,7 +173,6 @@
                 transition: bottom 300ms cubic-bezier(0.23, 1, 0.32, 1), transform 300ms 300ms cubic-bezier(0.23, 1, 0.32, 1);
             }
         }
-
     }
 
     .bar,
@@ -164,19 +208,14 @@
         }
     }
 
-    .mobile-menu-container {
-        display: none;
-        position: absolute;
-        top: 100%;
-        left: 0;
-        width: 100%;
-        background-color: $secondary-text-color;
-        padding: 60px;
-        text-align: center;
-        z-index: 1;
+    .header-menu {
+        margin-bottom: 57px;
 
-        &.is-open {
-            display: block;
+        &-item {
+            &:not(:last-child) {
+                margin-bottom: 40px;
+            }
         }
+
     }
 }
