--- a/sass/layout/_portfolio.scss
+++ b/sass/layout/_portfolio.scss
@@ -1,31 +1,64 @@
 .portfolio {
 
-  .selection-buttons-list {
-    display: flex;
-    flex-wrap: wrap;
-    margin-bottom: 40px;
-  }
+  .selection-buttons {
+    &-list {
+      display: flex;
+      flex-wrap: wrap;
+      margin-bottom: 40px;
 
-  .selection-buttons-item {
-
-    &:nth-child(1),
-    &:nth-child(2),
-    &:nth-child(3) {
-      margin-bottom: 15px;
+      @media screen and (min-width: 768px) {
+        justify-content: center;
+        margin-bottom: 30px;
+      }
     }
 
-    &:not(:last-child) {
-      margin-right: 8px;
+    &-item {
+      @media screen and (max-width: 767px) {
+
+        &:nth-child(-n+3) {
+          margin-bottom: 15px;
+        }
+
+        &:not(:last-child) {
+          margin-right: 8px;
+        }
+      }
+
+      @media screen and (min-width: 768px) {
+        margin-bottom: 0;
+
+        &:not(:last-child) {
+          margin-right: 8px;
+        }
+      }
+    }
+  }
+
+  &-list {
+    @media screen and (min-width: 768px) {
+      display: flex;
+      flex-wrap: wrap;
     }
   }
 
   &-item {
     background-color: #fff;
-    margin-bottom: 30px;
 
     @media screen and (max-width: 767px) {
-      &:last-child {
-        margin-bottom: 0;
+      &:not(:nth-last-child(-n+1)) {
+        margin-bottom: 30px;
+      }
+    }
+
+    @media screen and (min-width: 768px) {
+      width: calc((100% - 30px) / 2);
+
+      &:not(:nth-child(2n)) {
+        margin-right: 30px;
+      }
+
+      &:not(:nth-last-child(-n+2)) {
+        margin-bottom: 30px;
       }
     }
 
