--- a/sass/layout/_section4-team.scss
+++ b/sass/layout/_section4-team.scss
@@ -1,11 +1,30 @@
 .team {
   background-color: #f5f4fa;
 
+  &-list {
+    @media screen and (min-width: 768px) {
+      display: flex;
+      flex-wrap: wrap;
+    }
+  }
+
   &-item {
     background: #ffffff;
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
       0px 2px 1px rgba(0, 0, 0, 0.2);
     border-radius: 0px 0px 4px 4px;
+
+    @media screen and (min-width: 768px) {
+      width: calc((100% - 30px) / 2);
+
+      &:not(:nth-child(2n)) {
+        margin-right: 30px;
+      }
+
+      &:not(:nth-last-child(-n+2)) {
+        margin-bottom: 32px;
+      }
+    }
 
     &:not(:last-child) {
       @media screen and (max-width: 767px) {
