--- a/sass/layout/_section5-clients.scss
+++ b/sass/layout/_section5-clients.scss
@@ -5,20 +5,30 @@
     }
 
     &-item {
-        width: calc((100% - 30px) / 2);
-
         @media screen and (max-width: 767px) {
-            margin-bottom: 30px;
+            width: calc((100% - 30px) / 2);
 
-            &:last-child,
-            &:nth-last-child(2) {
-                margin-bottom: 0;
+            &:not(:nth-last-child(-n+2)) {
+                margin-bottom: 30px;
+            }
+
+            &:not(:nth-child(2n)) {
+                margin-right: 30px;
             }
         }
 
-        &:not(:nth-child(2n)) {
-            margin-right: 30px;
+        @media screen and (min-width: 768px) {
+            width: calc((100% - 30px * 2) / 3);
+
+            &:not(:nth-last-child(-n+3)) {
+                margin-bottom: 30px;
+            }
+
+            &:not(:nth-child(3n)) {
+                margin-right: 30px;
+            }
         }
+
     }
 
     &-link {
