--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -119,7 +119,7 @@
         display: none;
     }
 
-    .mobile-menu-container {
+    &-container {
         position: absolute;
         top: 100%;
         left: 0;
