--- a/sass/main.scss
+++ b/sass/main.scss
@@ -4,6 +4,7 @@
 @import "./utils/normalize";
 @import "./utils/custom_normalize";
 @import "./base/general";
+@import "./components/mobile-menu";
 @import "./components/button";
 @import "./components/logo";
 @import "./components/social-link";
