--- a/sass/components/_form.scss
+++ b/sass/components/_form.scss
@@ -75,6 +75,11 @@
             font-size: 12px;
             line-height: 1.1667;
             letter-spacing: 0.03em;
+
+            @media screen and (min-width: 1200px) {
+                font-size: 14px;
+                line-height: 1.7143;
+            }
         }
     }
 
@@ -94,9 +99,9 @@
         background: $secondary-text-color;
         transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
-
-        // margin-right: 4px;
-
+        @media screen and (max-width: 1200px) {
+            margin-right: 4px;
+        }
     }
 
     input:checked+.agreement-check {
