--- a/sass/components/_logo.scss
+++ b/sass/components/_logo.scss
@@ -7,9 +7,10 @@
     letter-spacing: 0.03em;
     color: $accent-color;
 
-    // font-size: 26px;
-    // line-height: 1.19;
-
+    @media screen and (min-width: 1200px) {
+        font-size: 26px;
+        line-height: 1.19;
+    }
 }
 
 .logo-black {
