--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -39,6 +39,10 @@
         max-width: 450px;
     }
 
+    @media screen and (min-width: 1200px) {
+        max-width: 528px;
+    }
+
     .btn-close {
         position: absolute;
         top: 8px;
