--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -16,10 +16,26 @@
             .footer-info,
             .footer-join-in {
                 width: calc((100% - 30px) / 2);
+                margin-bottom: 0;
             }
 
             .footer-subscribe {
                 width: 61%;
+            }
+        }
+
+        @media screen and (min-width: 1200px) {
+            text-align-last: left;
+
+            .footer-info,
+            .footer-join-in {
+                width: calc((100% - 30px * 3) / 4);
+                margin-right: 30px;
+            }
+
+            .footer-subscribe {
+                width: calc((100% - 30px) / 2);
+
             }
         }
     }
@@ -30,11 +46,6 @@
         @media screen and (min-width: 768px) {
             margin-right: 30px;
         }
-    }
-
-
-    &-list>div:not(:last-child) {
-        // margin-right: 30px;
     }
 
     .logo {
@@ -63,6 +74,10 @@
         .social-link-list {
             display: flex;
             justify-content: center;
+
+            @media screen and (min-width: 1200px) {
+                justify-content: start;
+            }
         }
     }
 
@@ -73,6 +88,12 @@
 }
 
 .subscribe {
+    &-form {
+        @media screen and (min-width: 1200px) {
+            display: flex;
+        }
+    }
+
     &-email {
         width: 100%;
         height: 50px;
@@ -83,11 +104,13 @@
         padding: 0 15px;
         color: $secondary-text-color;
         letter-spacing: 0.03em;
-
         margin-bottom: 20px;
 
+        @media screen and (min-width: 1200px) {
+            width: 360px;
+            margin-bottom: 0;
+        }
 
-        // width: 358px;
         &:focus {
             border-color: $accent-color;
         }
@@ -102,7 +125,10 @@
     &-button {
         display: inline-flex;
         align-items: center;
-        // margin-left: 9px;
+
+        @media screen and (min-width: 1200px) {
+            margin-left: 9px;
+        }
 
         svg {
             fill: currentColor;
