--- a/sass/layout/_portfolio.scss
+++ b/sass/layout/_portfolio.scss
@@ -10,6 +10,10 @@
         justify-content: center;
         margin-bottom: 30px;
       }
+
+      @media screen and (min-width: 1200px) {
+        margin-bottom: 50px;
+      }
     }
 
     &-item {
@@ -50,7 +54,7 @@
       }
     }
 
-    @media screen and (min-width: 768px) {
+    @media screen and (min-width: 768px) and (max-width: 1199px) {
       width: calc((100% - 30px) / 2);
 
       &:not(:nth-child(2n)) {
@@ -62,15 +66,17 @@
       }
     }
 
-    &:not(:nth-child(3n)) {
-      // margin-right: 30px;
-    }
+    @media screen and (min-width: 1200px) {
+      width: calc((100% - 30px * 2) / 3);
 
-    // &:nth-last-child(1),
-    // &:nth-last-child(2),
-    // &:nth-last-child(3) {
-    //   margin-bottom: 0;
-    // }
+      &:not(:nth-child(3n)) {
+        margin-right: 30px;
+      }
+
+      &:not(:nth-last-child(-n+3)) {
+        margin-bottom: 30px;
+      }
+    }
 
     &:hover,
     &:focus {
