--- a/sass/layout/_section4-team.scss
+++ b/sass/layout/_section4-team.scss
@@ -26,6 +26,15 @@
       }
     }
 
+    @media screen and (min-width: 1200px) {
+      width: calc((100% - 30px * 3) / 4);
+
+      &:not(:nth-child(4n)) {
+        margin-right: 30px;
+        margin-bottom: 0;
+      }
+    }
+
     &:not(:last-child) {
       @media screen and (max-width: 767px) {
         margin-bottom: 30px;
@@ -40,7 +49,10 @@
       padding-top: 30px;
       padding-bottom: 24px;
       text-align: center;
-      // padding-bottom: 30px;
+
+      @media screen and (min-width: 1200px) {
+        padding-bottom: 30px;
+      }
     }
 
     .description>* {
