--- a/sass/layout/_section5-clients.scss
+++ b/sass/layout/_section5-clients.scss
@@ -29,6 +29,15 @@
             }
         }
 
+        @media screen and (min-width: 1200px) {
+            width: calc((100% - 30px * 5) / 6);
+
+            &:not(:last-child) {
+                margin-right: 30px;
+                margin-bottom: 0;
+            }
+        }
+
     }
 
     &-link {
