--- a/sass/portfolio.scss
+++ b/sass/portfolio.scss
@@ -3,6 +3,7 @@
 @import "./utils/normalize";
 @import "./utils/custom_normalize";
 @import "./base/general";
+@import "./components/mobile-menu";
 @import "./components/button";
 @import "./components/logo";
 @import "./components/social-link";
